<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Favourite.View.FavouriteDetailsFragment"  >

<ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyle"
    android:layout_width="173dp"
    android:layout_height="166dp"
    android:outlineAmbientShadowColor="@color/white"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="@+id/imageView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/imageView" />

<ImageView
    android:id="@+id/imageView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/gradientcloudbg" />

<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/alexandria_medium"
            android:text="@string/alexandria"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/alexandria_medium"
            android:text="@string/mostlysunny"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/weatherImgView"
            android:layout_width="257dp"
            android:layout_height="176dp"
            android:layout_marginStart="76dp"
            android:src="@drawable/cloudysun" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="399dp"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="112dp"
            android:fontFamily="@font/alexandria_medium"
            android:text="@string/weathertemp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_DayFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/alexandria_medium"
            android:text="H:27 L:19"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="332dp"
            android:layout_height="100dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/linearbg"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="182dp"
                android:layout_height="match_parent"
                android:layout_weight="0.333"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView38"
                    android:layout_width="48dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/pressureicon" />

                <TextView
                    android:id="@+id/tvPressure"
                    android:layout_width="79dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/alexandria_medium"
                    android:text="@string/pressure"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/pressurePercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/alexandria_medium"
                    android:text="975hPa"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="182dp"
                android:layout_height="match_parent"
                android:layout_weight="0.333"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageview6"
                    android:layout_width="52dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/water" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/alexandria_medium"
                    android:text="@string/humidity"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/humidityPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/alexandria_medium"
                    android:text="25"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="182dp"
                android:layout_height="match_parent"
                android:layout_weight="0.333"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView37"
                    android:layout_width="48dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/windy" />

                <TextView
                    android:id="@+id/tvWind"

                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/alexandria_medium"
                    android:text="@string/winds"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/windPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/alexandria_medium"
                    android:text="12km/h"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_RV"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:fontFamily="@font/alexandria_medium"
                android:text="@string/today"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todayDetailsRecView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alexandria_medium"
                android:text="@string/nextdays"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/FivedaysRec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="170dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </LinearLayout>
</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>